fixed width and input alignment for wallet validation form

--- a/src/sass/modals.scss
+++ b/src/sass/modals.scss
@@ -215,6 +215,12 @@
 #validation-form .input-wrapper {
   width: 100%;
   margin: 0px;
+  input {
+    text-align: center;
+  }
+  .pixel-input {
+    padding: 10px;
+  }
 }
 
 .year-summary {
@@ -241,6 +247,7 @@
     text-transform: uppercase;
     border: none;
     height: 30px;
+    width: 100%;
   }
   textarea {
     font-family: '04b_03', monospace;
